projects/vb6parse/snapshots/tests/library/interaction/command/command_in_comparison.snap
---
source: projects/vb6parse/tests/library/interaction/command.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: ParenthesizedExpression
          children:
            - kind: LeftParenthesis
              text: (
            - kind: BinaryExpression
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Command
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children: []
                    - kind: RightParenthesis
                      text: )
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"/auto\""
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
